welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:4: error: ')' expected but '}' found.
if (estSurBiscuit() { bis = bis + 1 }} 
                                     ^